[package]
name = "st7735-lcd"
description = "ST7735 TFT LCD driver with embedded-graphics support"
version = "0.3.0"
authors = ["Paul Sajna <sajattack@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/sajattack/st7735-lcd-rs"
readme = "README.md"
documentation = "https://docs.rs/st7735-lcd"

[dependencies]
embedded-hal = "0.2.3"
nb = "0.1.2"
panic-abort = "0.3.1"
panic-semihosting = "0.5.2"
stm32f1xx-hal = { version = "0.3.0", features = [ "rt", "stm32f103" ] }

[dependencies.num-traits]
version = "0.2.8"
default-features = false

[dependencies.num-derive]
version = "0.2.5"
default-features = false

[dependencies.embedded-graphics]
optional = true
version = "0.4.9"

[dev-dependencies]
metro_m4 = "0.1"
panic-halt = "0.2"
#pygamer = "0.1"
cortex-m-rt = "0.6.8"
cortex-m = "0.6.0"

[features]
default = ["graphics"]
graphics = ["embedded-graphics"]

[profile.dev]
codegen-units = 1
incremental = false

[profile.release]
codegen-units = 1
debug = true
lto = true
